<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@string/hd_start_time"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@string/hd_end_time"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/start_time"
            android:paddingLeft="10dp"
            android:textSize= "16sp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/end_time"
            android:paddingLeft="10dp"
            android:textSize= "16sp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"></LinearLayout>

    <TextView
        android:id="@string/hd_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/distance"
        android:paddingLeft="10dp"
        android:textSize= "16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:text="@string/km"
        android:textSize= "16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@string/hd_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/step_cnt"
        android:paddingLeft="10dp"
        android:textSize= "16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:text="@string/step"
        android:textSize= "16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@string/hd_calorie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/calorie"
        android:paddingLeft="10dp"
        android:textSize= "16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:text="@string/calorie"
        android:textSize= "16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

</LinearLayout>